2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/isolation.hxx:
 - Support for REPEATABLE READ isolation level.  Thanks pawsa.
 - Fixes #259.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/mingw.mak.template:
 - Build fix for MinGW: LIBPQPATH, not LIBPATH.  Thanks Maxwell (?)
 - Fixes #261.
2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx, test/unit/test_string_conversion.cxx:
 - Some integer overflows in from_string were not detected.
 - Fixes #263.
2013-01-10  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Fix w clang++ 3.0: basic C-library test broke.
2012-08-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/strconv.cxx:
 - Compile fix for clang++ 3.2.  Thanks Amy Troschinetz.
 - Fixes #253.
2012-08-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
 - Compile fix for clang++ 3.2.  Thanks Amy Troschinetz.
 - Fixes #252.
2012-04-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in, debian, Makefile.am, tools/lint, tools/release:
 - Removed obsolete debian and RPM packaging.
 - No longer check, or update, debian/changelog for releases.
 - Dropped debian directory altogether.
2012-04-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/lint, tools/pqxx-fulltest, tools/pre-release-check, tools/splitconfig:
 - Mark local variables in shell functions with "local."
2012-03-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/binarystring.hxx,
 include/pqxx/connection_base.hxx, include/pqxx/connection.hxx,
 include/pqxx/connectionpolicy.hxx, include/pqxx/cursor.hxx,
 include/pqxx/errorhandler.hxx, include/pqxx/except.hxx,
 include/pqxx/field.hxx, include/pqxx/internal/callgate.hxx,
 include/pqxx/internal/gates/connection-dbtransaction.hxx,
 include/pqxx/internal/gates/connection-notification_receiver.hxx,
 include/pqxx/internal/gates/connection-pipeline.hxx,
 include/pqxx/internal/gates/connection-transaction.hxx,
 include/pqxx/internal/gates/errorhandler-connection.hxx,