@@ -1,5 +1,8 @@
 2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/isolation.hxx:
+ - Updated documentation for isolation levels.
+2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/isolation.hxx:
  - Support for REPEATABLE READ isolation level.  Thanks pawsa.
  - Fixes #259.
 2013-01-12  Jeroen T. Vermeulen <jtv@xs4all.nl>
